// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <GitExpert /> should must show component correctly 1`] = `
<div
  className="container"
>
  <h2>
    Git Expert App
  </h2>
  <br />
  <AddCategory
    setCategories={[Function]}
  />
  <br />
  <hr />
  <h2>
    Category
  </h2>
  <ol />
</div>
`;

exports[`Component <GitExpert /> should show a list of categories 1`] = `
<div
  className="container"
>
  <h2>
    Git Expert App
  </h2>
  <br />
  <AddCategory
    setCategories={[Function]}
  />
  <br />
  <hr />
  <h2>
    Category
  </h2>
  <ol>
    <ListCategory
      category="One Punch"
      key="One Punch"
    />
    <ListCategory
      category="Dragon ball"
      key="Dragon ball"
    />
  </ol>
</div>
`;
